TPMS live decoding to serial console

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,4 @@
 idf_component_register(SRCS "4runner_canbus_main.c"
                     REQUIRES driver
-                    INCLUDE_DIRS ".")
+                    PRIV_REQUIRES esp_timer
+                    INCLUDE_DIRS "." "..")
