--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "4runner_canbus_main.cpp"
-                    REQUIRES driver display_manager
+                    REQUIRES driver display_manager esp_timer
                     INCLUDE_DIRS ".")
